refactor: Rename project to BCast and update branding
This commit renames the project from "BandCast Extension" to "BCast" and updates all related branding elements, including:
- Package.json name and version
- HTML page titles
- Metadata JSON fields
- Internal application names and display strings in React components
- Manifest.json name and version
- Console log messages
- Filenames and directory structures (implicitly, by renaming files)

Additionally, it includes preparatory work for Chromecast integration by:
- Adding a `CAST_APP_ID` to `extension/popup.tsx`.
- Preparing to inject a `cast_bridge.js` script in `extension/content.ts`.
- Updating `manifest.json` to include `cast_bridge.js` in `web_accessible_resources`.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "BandCast",
-  "version": "1.0.0",
+  "name": "BCast",
+  "version": "0.1",
   "description": "Cast Bandcamp albums to your TV",
   "permissions": [
     "activeTab",
@@ -27,7 +27,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["assets/*"],
+      "resources": ["cast_bridge.js", "assets/*"],
       "matches": ["*://*.bandcamp.com/*"]
     }
   ]
