--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bandcast-extension",
-  "version": "1.0.0",
+  "name": "bcast-extension",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
